fixed height on mobile

--- a/css/partials/_base.scss
+++ b/css/partials/_base.scss
@@ -8,7 +8,7 @@ input[type=reset],input[type=submit]{-webkit-appearance:button;cursor:pointer;}b
 html,body{
 	font-size:12px;
 	background: #FAFAFA;
-	width:100%;
+	// width:100%;
 }
 body{
 }
