--- a/css/style.css
+++ b/css/style.css
@@ -166,7 +166,6 @@ legend, button::-moz-focus-inner, input::-moz-focus-inner {
 html, body {
   font-size: 12px;
   background: #FAFAFA;
-  width: 100%;
 }
 
 ul {
